[gd_scene load_steps=2 format=3 uid="uid://d8j6y8q3x4n5o"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_4u4vx"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4u4vx")

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2

[node name="MovesLabel" type="Label" parent="TopBar"]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -13.0
offset_right = 100.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "剩余步数: 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="TopBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -13.0
offset_right = -20.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "分数: 0"
horizontal_alignment = 2

[node name="BottomBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="ControlsLabel" type="Label" parent="BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = "操作说明：
Tab - 切换环/直径模式
↑↓ - 选择环/直径
←→ - 旋转/移动"
horizontal_alignment = 1
vertical_alignment = 1 